--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						<div class="hero-copy">
 	                        <h1 class="hero-title mt-0">IntelliPHP</h1>
 	                        <p class="hero-paragraph">AI-companion for PHP developers, available for Visual Studio and Visual Studio Code.</p>
-	                        <div class="hero-cta"><a class="button button-primary" href="#">Install</a><a class="button" href="#">Pricing</a></div>
+	                        <div class="hero-cta"><a class="button button-primary" href="https://www.devsense.com/download">Install</a><a class="button" href="https://www.devsense.com/purchase">Pricing</a></div>
 						</div>
 						<div class="hero-figure anime-element">
 							<svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
@@ -152,7 +152,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<div class="cta-inner section-inner">
 						<h3 class="section-title mt-0">Do you have a question?</h3>
 						<div class="cta-cta">
-							<a class="button button-primary button-wide-mobile" href="#">Get in touch</a>
+							<a class="button button-primary button-wide-mobile" href="https://community.devsense.com">Get in touch</a>
 						</div>
 					</div>
 				</div>
